<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/manual_payment_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.wepay.wecrowd.wecrowd.ManualPaymentActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <TextView
            style="@style/TextView"
            android:textAllCaps="true"
            android:text="@string/title_instruction_manual_entry" />
        <LinearLayout
            android:id="@+id/manual_payment_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <include
            layout="@layout/linear_tagged_text_entry"
            android:id="@+id/manual_payment_donation" />
        <include
            layout="@layout/linear_tagged_text_entry"
            android:id="@+id/manual_payment_first_name"/>
        <include
            layout="@layout/linear_tagged_text_entry"
            android:id="@+id/manual_payment_last_name" />
        <include
            layout="@layout/linear_tagged_text_entry"
            android:id="@+id/manual_payment_email" />
        <include
            layout="@layout/linear_tagged_text_entry"
            android:id="@+id/manual_payment_card_number" />
        <include
            layout="@layout/linear_tagged_text_entry"
            android:id="@+id/manual_payment_cvv" />
        <include
            layout="@layout/linear_tagged_text_entry"
            android:id="@+id/manual_payment_zip_code" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/manual_payment_expiration_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/title_expiration" />
            <EditText
                style="@style/EditTextSingleLine"

                android:id="@+id/manual_payment_month_entry"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:maxLength="2"
                android:inputType="number"
                android:hint="@string/hint_month"
                android:text="@string/demo_payer_expiration_month" />
            <EditText
                style="@style/EditTextSingleLine"

                android:id="@+id/manual_payment_year_entry"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:maxLength="4"
                android:inputType="number"
                android:hint="@string/hint_year"
                android:text="@string/demo_payer_expiration_year" />
        </LinearLayout>

        <Button
            style="@style/ButtonAction"

            android:text="@string/title_button_donate"
            android:onClick="didChooseDonate"
            android:layout_marginTop="@dimen/activity_vertical_margin" />
    </LinearLayout>
</ScrollView>
