<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"

    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/message_welcome"
        style="@style/TitleText" />

    <Button
        android:id="@+id/button_choose_login"
        android:onClick="didChooseLogin"

        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/title_login"

        style="@style/ButtonAction" />

    <Button
        android:id="@+id/button_choose_browse"
        android:onClick="didChooseBrowse"

        android:gravity="center"
        android:text="@string/title_browse"

        style="@style/ButtonAction" />

</LinearLayout>
