<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.wepay.wecrowd.wecrowd.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <EditText
            style="@style/EditTextSingleLine"

            android:id="@+id/edit_text_credentials"
            android:hint="@string/hint_login" />
        <EditText
            style="@style/EditTextPassword"

            android:id="@+id/edit_text_password"
            android:hint="@string/hint_password" />

        <Button
            style="@style/ButtonAction"

            android:id="@+id/button_request_login"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="didRequestLogin"
            android:text="@string/title_button_login" />

    </LinearLayout>
</ScrollView>