<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.wepay.wecrowd.wecrowd.CampaignDetailActivity" >

    <LinearLayout
        android:id="@+id/campaign_detail_root"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/loading_image" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical" >

            <TextView
                style="@style/TextViewLeft"

                android:id="@+id/campaign_detail_description"
                android:text="@string/demo_campaign_description" />
            <ProgressBar
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"

                android:id="@+id/campaign_detail_progress_bar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:progressBackgroundTint="@color/theme_neutral"
                android:progressTint="@color/theme_green"
                android:max="100"
                android:progress="50" />
            <TextView
                style="@style/TextViewSingleLine"

                android:id="@+id/campaign_detail_progress_text"
                android:text="@string/placeholder_generic_progress"
                android:textColor="@color/theme_green" />
            <Button
                style="@style/ButtonAction"

                android:id="@+id/campaign_detail_button_donate"
                android:onClick="didSelectDonate"
                android:text="@string/title_button_donate"
                android:layout_marginTop="@dimen/activity_vertical_margin" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
